--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Base News package for demonstration purposes and to be extended as needed",
     "require": {
         "typo3/flow": "*",
-        "typo3/neos": "~2.0"
+        "typo3/neos": "~2.0|~2.1"
     },
     "autoload": {
         "psr-0": {
